feat(cli): standardize cargo-install deployment flow
- rename the installable binary target to \n- update container defaults to build the  binary\n- switch README install steps to \n- expand service docs for launchd/systemd user-service operation and paths

--- a/cli/Cargo.toml
+++ b/cli/Cargo.toml
@@ -2,6 +2,11 @@
 name = "cli"
 version.workspace = true
 edition.workspace = true
+autobins = false
+
+[[bin]]
+name = "punchgate"
+path = "src/bin/cli.rs"
 
 [features]
 default = ["autonat"]
